--- a/ornitologos-backend/src/test/resources/application-test.properties
+++ b/ornitologos-backend/src/test/resources/application-test.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=123
+spring.datasource.driverClassName= org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
