--- a/ornitologos-backend/src/main/resources/application-dev.properties
+++ b/ornitologos-backend/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos-amadores
+spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos_amadores
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
