--- a/ornitologos-backend/src/main/resources/application-dev.properties
+++ b/ornitologos-backend/src/main/resources/application-dev.properties
@@ -1,11 +1,20 @@
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+##spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+##spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+##
+##spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos-amadores
+##spring.datasource.username=postgres
+#spring.datasource.password=1234
+#
+##spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+##spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos-amadores
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driverClassName= org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
