--- a/ornitologos-backend/src/main/resources/application-dev.properties
+++ b/ornitologos-backend/src/main/resources/application-dev.properties
@@ -6,6 +6,10 @@ spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos_amadores
 spring.datasource.username=postgres
 spring.datasource.password=1234
+spring.datasource.driver=org.postgresql.Driver
+
+spring.security.user.name=username
+spring.security.user.password=$2a$12$CKJhXkQgyK6MJtl158aJKui9CMki5JYHAiV67HvV693hjtfpiE2Vu
 
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
