--- a/ornitologos-backend/src/main/resources/application-dev.properties
+++ b/ornitologos-backend/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=import.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/ornitologos_amadores
