--- a/ornitologos-backend/src/test/resources/application-test.properties
+++ b/ornitologos-backend/src/test/resources/application-test.properties
@@ -2,7 +2,11 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driverClassName= org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+security.jwt.token.secret-key=secret-key
+spring.security.user.name=teste
+spring.security.user.password=teste
