--- a/ornitologos-frontend/.eslintrc.json
+++ b/ornitologos-frontend/.eslintrc.json
@@ -20,6 +20,7 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
+    "react/prop-types": "off",
     "react/react-in-jsx-scope": "off"
   }
 }
