Frontend: Instalando e configurando JsonServer

--- a/ornitologos-frontend/package.json
+++ b/ornitologos-frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "mock": "json-server -w -p 3333 ./mock/database.json",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
